# basic_machine_learning

./: .gitignore  README.md  folder_structure.md  pyproject.toml
KNN_from_scratch/: README.md  data_note.md  knn.ipynb
fine_tuning_pretrained_model/: README.md  app.py  data_note.md  training.ipynb
logistic_regression/: data_note.md  logistic_regression.ipynb
ml_notes/: basic_ml_concepts.md  fine_tuning.md  nn_from_scratch.md  resources.md
ml_notes/basics/: module_1.md  module_2.md  module_3.md  module_4.md  module_5.md  module_6.md  module_7.md  module_8.md
nn_from_scratch/: README.md  app.py  nn_from_scratch.ipynb
