[project]
name = "basic-machine-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "p-retrover",email = "primalretrover@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
