[tool.poetry]
package-mode = false # This tells Poetry: "I'm just managing a project, not building a library"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[project]
name = "basic-machine-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "p-retrover",email = "primalretrover@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<1.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[tool.poetry.dependencies]
torch = { version = "^2.10.0", source = "pytorch-cpu" }
torchvision = { version = "^0.25.0", source = "pytorch-cpu" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
